--- a/config.toml
+++ b/config.toml
@@ -105,3 +105,26 @@ googleAnalytics                 = "UA-123629928-1"                     # https:/
             description  = "SFBayareaTech - The San Francisco Bay Area Tech Community"   # Max 160 characters show in search results
             footerText   = "SFBayareaTech - The San Francisco Bay Area Tech Community"                      # Text to override default footer text (markdown allowed)
 
+[deployment]
+order = [".png$", ".jpg$", ".gif$", ".svg$"]
+
+[[deployment.targets]]
+name = "softinio-deploy"
+URL = "s3://www.sfbayareatech.xyz?region=us-west-1"
+cloudFrontDistributionID = "E1RSM3ZAY3D14H"
+
+[[deployment.matchers]]
+#  Cache static assets for 1 year.
+pattern = "^.+\\.(js|css|svg|ttf)$"
+cacheControl = "max-age=31536000, no-transform, public"
+gzip = true
+
+[[deployment.matchers]]
+pattern = "^.+\\.(png|jpg)$"
+cacheControl = "max-age=31536000, no-transform, public"
+gzip = false
+
+[[deployment.matchers]]
+pattern = "^.+\\.(html|xml|json)$"
+gzip = true
+
