--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "SFBayAreaTechies.com"
 theme                            = "introduction"
 DefaultContentLanguage           = "en"                    # Default language for multilingual sites
 # disqusshortname                 = ""                     # https://gohugo.io/content-management/comments
-googleAnalytics                 = ""                     # https://gohugo.io/templates/internal/#google-analytics
+googleAnalytics                 = "UA-123629928-1"                     # https://gohugo.io/templates/internal/#google-analytics
 
 [params]
     themeStyle                   = "light"                 # Choose "light" or "dark"
@@ -32,9 +32,9 @@ googleAnalytics                 = ""                     # https://gohugo.io/tem
     # Share buttons on blog post pages
     [params.share]
         twitter                  = true
-        facebook                 = true
-        googlePlus               = true
-        pinterest                = true
+        facebook                 = false
+        googlePlus               = false
+        pinterest                = false
 
     # Social icons appear in introduction and contact section. Add as many more as you like.
     # Icon pack "fab" includes social network icons, see: https://fontawesome.com/icons?d=gallery&s=brands&m=free
