Move to github pages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,15 +35,12 @@ jobs:
 
       - run: npm install -g postcss-cli && npm install -g autoprefixer
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-1
-
       - name: Hugo Build
         run: hugo --minify
 
-      - name: Deploy to S3
-        run: hugo deploy --maxDeletes -1 --invalidateCDN
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+          cname: www.sfbayareatechies.com
