--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: npm install -g postcss-cli && npm install -g autoprefixer
+      - run: npm install -g postcss-cli && npm install -g postcss && npm install -g autoprefixer
 
       - name: Hugo Build
         run: hugo --minify
